--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '3'
 volumes: 
   dados:
+networks: 
+  web:
+  banco:
+  fila:
 services:
-  db:
+  bancodados:
     image: postgres:9.6    
     environment:
         POSTGRES_HOST_AUTH_METHOD: trust
@@ -10,17 +14,43 @@ services:
       - dados:/var/lib/postgresql/data
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks: 
+      - banco
   frontend:
     image: nginx:1.13
     volumes:
       - ./web:/usr/share/nginx/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - 4200:80  
+      - 80:80  
+    networks: 
+      - web
+    depends_on: 
+      - app
   app:
     image: python:3.6
     volumes:
       - ./app:/app
     working_dir: /app
     command: bash ./app.sh
-    ports:
-      - 8080:8080
+    networks: 
+      - banco
+      - web
+      - fila
+    depends_on: 
+      - bancodados
+      - queue
+  queue:
+    image: redis:3.2
+    networks:
+      - fila
+  worker:
+    image: python:3.6 
+    volumes: 
+      - ./worker:/worker
+    working_dir: /worker
+    command: bash ./app.sh
+    networks: 
+     - fila
+    depends_on: 
+      - queue
